unpackaged/main/default/objects/SLCA2__CA_Calendar__c/SLCA2__CA_Calendar__c.object-meta.xml
<CustomObject>
    <description>main CalendarAnything settings object</description>
    <label>CA_Calendar</label>
    <nameField>
        <label>CA_Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_Calendar</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>