unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__activeAdvancedFilterSection__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__activeAdvancedFilterSection__c</fullName>
    <label>activeAdvancedFilterSection</label>
    <length>18</length>
    <type>Text</type>
</CustomField>