unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__calendarOption__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__calendarOption__c</fullName>
    <label>calendarOption</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>