unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__conditionalColoringSettings__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__conditionalColoringSettings__c</fullName>
    <label>conditionalColoringSettings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>