unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__eventColor__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__eventColor__c</fullName>
    <defaultValue>"rgb(50, 146, 98)"</defaultValue>
    <label>eventColor</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>