unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__eventEndFieldName__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__eventEndFieldName__c</fullName>
    <label>eventEndFieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>