unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__friendlyName__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__friendlyName__c</fullName>
    <defaultValue>""</defaultValue>
    <externalId>true</externalId>
    <label>friendlyName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>