unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__iCalToken__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__iCalToken__c</fullName>
    <label>iCalToken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>