unpackaged/main/default/objects/SLCA2__CA_Calendar__c/fields/SLCA2__wideFilterAdvancedSettings__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__wideFilterAdvancedSettings__c</fullName>
    <label>wideFilterAdvancedSettings</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>